test/spec_vectors/return_call_indirect/fail/module_16.wat
(module (type (func (param f64 i32))) (table 0 funcref) (func $arity-0-vs-2 (return_call_indirect (type 0) (i32.const 0))))